VSCP-4732: Fix Access_token api (#3093)
